metadata/labels/objects/Set_Time__c.object
<CustomObject>
    <description>The time(s) the band will be playing on stage.</description>
    <fields>
        <fullName>Band__c</fullName>
        <description>The band related to the set time.</description>
        <label>Band</label>
        <referenceTo>Band__c</referenceTo>
        <relationshipLabel>Set Times</relationshipLabel>
        <relationshipName>Set_Times</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>The stage related to a specific set time.</description>
        <label>Stage</label>
        <referenceTo>Stage__c</referenceTo>
        <relationshipLabel>Set Times</relationshipLabel>
        <relationshipName>Set_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the set time.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>The time the band(s) will perform on stage at the festival.</description>
        <label>Time</label>
        <picklist>
            <picklistValues>
                <fullName>9 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Set Time</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Set Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Set Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>